# gravity

./: CMakeLists.txt  README.md
doc/: Doxyfile.in
include/: octree.h  particle.h  simulation.h  visualisation.h
src/: .clang-format  CMakeLists.txt  main.cpp  octree.cpp  particle.cpp  simulation.cpp  visualisation.cpp
